--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,9 @@
 		</dependencies>
 	</dependencyManagement>
 	<build>
+		<finalName>third-party-server</finalName>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
