--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,18 @@
 		</dependencies>
 	</dependencyManagement>
 	<build>
-<!--		<finalName>third-party-server</finalName>-->
+		<finalName>third-party-server</finalName>
 		<plugins>
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
